--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -3,9 +3,9 @@ name: Run Harbour Scraper
 on:
   schedule:
     # 5 times per day (UTC): 00:05, 04:05, 08:05, 12:05, 16:05
-    # (IST is UTC+5:30 → ~05:35, 09:35, 13:35, 17:35, 21:35)
+    # (IST = UTC+5:30 → approx 05:35, 09:35, 13:35, 17:35, 21:35)
     - cron: "5 0,4,8,12,16 * * *"
-  workflow_dispatch: {}  # allow manual trigger from GitHub UI
+  workflow_dispatch: {}  # allow manual trigger
 
 jobs:
   run-scraper:
@@ -25,9 +25,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Create Firebase key file from secret
-        run: |
-          echo "${{ secrets.FIREBASE_KEY_JSON }}" > harbour-final-firebase-private-key.json
+      # ❌ Removed Firebase file creation — not needed
+      # We now pass JSON directly via env variable FIREBASE_KEY_JSON
 
       - name: Run scraper
         env:
@@ -36,5 +35,6 @@ jobs:
           TG_SESSION_STRING: ${{ secrets.TG_SESSION_STRING }}
           ONESIGNAL_APP_ID: ${{ secrets.ONESIGNAL_APP_ID }}
           ONESIGNAL_REST_API_KEY: ${{ secrets.ONESIGNAL_REST_API_KEY }}
+          FIREBASE_KEY_JSON: ${{ secrets.FIREBASE_KEY_JSON }}   # ⬅ IMPORTANT
         run: |
           python harbour_scraper.py
